--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -2,6 +2,20 @@
 
 % TODO: ajouter slides du cours et rapports Loic
 
+@techreport{bassang_semestre,
+title={{Docker and Internet of Things}},
+author={{Loïc Bassang}},
+institution={{\school}},
+year={2015}
+}
+
+@techreport{bassang_bachelor,
+title={{Docker and Internet of Things - Travail de Bachelor}},
+author={{Loïc Bassang}},
+institution={{\school}},
+year={2015}
+}
+
 @book{mouat_2005,
 title={Using Docker},
 publisher={O'Reilly Media},
@@ -93,6 +107,51 @@ note={\url{http://www.jrslv.com/docker-1-10/}},
 year={2016},
 month={mai}
 }
+
+@misc{docker_documentation,
+title={{Docker Documentation}},
+author={{Docker Inc.}},
+note={\url{https://docs.docker.com/}},
+year={2016},
+month={mai}
+}
+
+@misc{cloudsigma_manage_docker_res,
+title={{Manage Docker resources with Cgroups}},
+author={{Viktor Petersson}},
+note={\url{https://www.cloudsigma.com/manage-docker-resources-with-cgroups/}},
+year={2016},
+month={mai}
+}
+
+@misc{wikipedia_cgroups,
+title={{Cgroups}},
+note={\url{https://fr.wikipedia.org/wiki/Cgroups}},
+year={2016},
+month={mai}
+}
+
+@misc{sysadmincast_cgroups,
+title={{Introduction to Linux Control Groups (Cgroups)}},
+note={\url{https://sysadmincasts.com/episodes/14-introduction-to-linux-control-groups-cgroups}},
+year={2016},
+month={mai}
+}
+
+@misc{hardkernel_odroid_xu3,
+title={{ODROID-XU3 Lite | Hardkernel}},
+note={\url{http://www.hardkernel.com/main/products/prdt_info.php?g_code=G141351880955}},
+year={2016},
+month={mai}
+}
+
+@misc{wikipedia_docker,
+title={{Docker (software)}},
+note={\url{https://en.wikipedia.org/wiki/Docker_%28software%29}},
+year={2016},
+month={mai}
+}
+
 
 
 
