Add chapter name in footer

--- a/rapports/report/report_docker_marigliano.tex
+++ b/rapports/report/report_docker_marigliano.tex
@@ -26,9 +26,9 @@
 \lhead[]{Docker and Embedded systems}
 \chead[]{}
 \rhead{\includegraphics[width=3cm]{img/mse_logo}}
-\lfoot[]{}
-\cfoot[]{\thepage}
-\rfoot[]{}
+\lfoot[]{\nouppercase{\leftmark}}
+\cfoot[]{}
+\rfoot[]{\thepage}
 \renewcommand{\headrulewidth}{0.4pt}% Default \headrulewidth is 0.4pt
 \renewcommand{\footrulewidth}{0.4pt}% default is 0pt
 }
