Write report to v0.0.3

--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -152,6 +152,27 @@ year={2016},
 month={mai}
 }
 
+@misc{askubuntu_mount_luks,
+title={{10.04 - Mount a LUKS partition at boot - Ask Ubuntu}},
+note={\url{http://askubuntu.com/questions/21025/mount-a-luks-partition-at-boot}},
+year={2016},
+month={mai}
+}
 
+@misc{sleepyhead-cryptpart,
+title={{Encrypt Partitions}},
+author={{Colin Barschel}},
+note={\url{http://sleepyhead.de/howto/?href=cryptpart}},
+year={2016},
+month={mai}
+}
+
+@misc{launchbylunch_encrypt_docker,
+title={{Encrypting Docker containers on a Virtual Server}},
+author={{Sehrope Sarkuni}},
+note={\url{https://launchbylunch.com/posts/2014/Jan/13/encrypting-docker-on-digitalocean/}},
+year={2016},
+month={mai}
+}
 
 
