--- a/rapports/report/bibliography.bib
+++ b/rapports/report/bibliography.bib
@@ -175,4 +175,10 @@ year={2016},
 month={mai}
 }
 
-
+@misc{secured_embedded_systems_heia,
+title={{Filesystems - Secured Embedded Systems}},
+author={{Jean-Roland Schuler}},
+note={Cours HES-SO Master},
+year={2016},
+month={mai}
+}
